--- a/styles/head.css
+++ b/styles/head.css
@@ -104,3 +104,32 @@
   z-index: 40;
   left: 113px;
 }
+
+.brush1,
+.brush2 {
+  background-color: pink;
+  width: 54px;
+  height: 10px;
+  border-radius: 5px;
+  z-index: 40;
+  position: absolute;
+  top: 126px;
+  animation: 2.5s brush_effect infinite ease-in-out;
+}
+.brush1 {
+  left: 23px;
+}
+.brush2 {
+  left: 163px;
+}
+@keyframes brush_effect {
+  0% {
+    background-color: pink;
+  }
+  50% {
+    background-color: #dc9935;
+  }
+  100% {
+    background-color: pink;
+  }
+}
